<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_design"
    tools:context=".PostNewItemActivity">

    <ImageView
        android:id="@+id/imageViewNewItemImage"
        android:layout_width="392dp"
        android:layout_height="251dp"
        android:background="#00000000"
        android:src="@drawable/untitled"
        android:tint="@color/darkestStart"
        android:tintMode="screen"
        app:layout_constraintBottom_toTopOf="@+id/addVideoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/untitled"
        android:contentDescription="@string/item_image" />

    <Button
        android:id="@+id/addVideoButton"
        style="@style/AnyTextButton"
        android:background="@drawable/button_states_selector"
        android:text="@string/add_video"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewNewItemImage" />

    <Button
        android:id="@+id/viewVideoButton"
        style="@style/AnyTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_states_selector"
        android:text="@string/view_video"
        android:textColor="@android:color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewNewItemImage"
        app:layout_constraintEnd_toEndOf="@+id/imageViewNewItemImage" />

    <Spinner
        android:id="@+id/spinner"
        style="@style/spinnerStyle"
        android:background="#00000000"
        app:layout_constraintBottom_toTopOf="@+id/editTextTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addVideoButton"
        tools:listitem="@layout/spinner_style" />


    <EditText
        android:id="@+id/editTextDescription"
        style="@style/EditTextStyle"
        android:layout_width="354dp"
        android:layout_height="148dp"
        android:background="@drawable/edittext_states_selector"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/item_desc_hint"
        android:inputType="textMultiLine"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/PostItemButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextTitle"
        style="@style/EditTextStyle"
        android:layout_width="344dp"
        android:layout_height="53dp"
        android:background="@drawable/edittext_states_selector"
        android:ems="10"
        android:hint="@string/item_name_hint"
        android:inputType="textShortMessage|text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/editTextDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/PostItemButton"
        style="@style/AnyTextButton"
        android:background="@drawable/button_states_selector"
        android:text="@string/post_item"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/PostItemButton"
        app:layout_constraintEnd_toEndOf="@+id/imageViewNewItemImage"
        app:layout_constraintStart_toStartOf="@+id/imageViewNewItemImage"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    <ProgressBar
        android:progress="0"
        android:max="100"
        android:id="@+id/uploadingProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/PostItemButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>